# fastapi-blueprint

./: .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 0646b83b8cfd_first_migration.py  b25a64b9b4a1_create_books_table.py
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/src/: celery_worker.py  constants.py  database.py  faststream_worker.py  graphql.py  main.py
api/src/books/: models.py  router.py
api/src/tasks/: router.py
api/tests/: test_api_available.py  test_graphql.py  test_rest_api.py
celery/: Dockerfile  pyproject.toml
celery/src/: worker.py
faststream/: Dockerfile  pyproject.toml
faststream/src/: scheduler.py  worker.py
src/: admin.py  celery_app.py  constants.py  database.py  db.py  graphql.py  main.py
src/books/: router.py  service.py
src/models/: __init__.py  base.py  tasks.py
src/routes/: graphql.py
src/tasks/: router.py
taskiq/: Dockerfile  pyproject.toml
taskiq/src/: constants.py  worker.py
tests/: test_admin.py  test_rest_api.py
