[tool.poetry]
name = "fastapi-blueprint"
version = "0.1.0"
description = ""
authors = ["Oriol Vall <oriol.vall.hdez@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
httpx = "^0.24.1"
sqlalchemy = "^2.0.19"
aiosqlite = "^0.19.0"
alembic = "^1.11.1"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
prospector = "^1.10.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"