[tool.poetry]
name = "fastapi-blueprint"
version = "0.1.0"
description = ""
authors = ["Oriol Vall <oriol.vall.hdez@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.23.1"
httpx = "^0.24.1"
strawberry-graphql = "^0.258.0"
sqlalchemy = "^2.0.19"
pydantic = "^2.0"
aiosqlite = "^0.19.0"
alembic = "^1.11.1"
sqlalchemy-utils = "^0.41.1"
sqlmodel = "^0.0.18"
sqladmin = "^0.17.0"
celery = "^5.4.0"
redis = "^5.2.1"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
prospector = "^1.10.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"