[tool.black]
line_length = 120

[tool.isort]
profile = "black"

[project]
authors = [
    {name = "Oriol Vall", email = "oriol.vall.hdez@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn<1.0.0,>=0.23.1",
    "httpx<1.0.0,>=0.24.1",
    "strawberry-graphql==0.263.0",
    "sqlalchemy<3.0.0,>=2.0.19",
    "pydantic<3.0,>=2.0",
    "aiosqlite<1.0.0,>=0.19.0",
    "alembic<2.0.0,>=1.11.1",
    "sqlalchemy-utils<1.0.0,>=0.41.1",
    "sqlmodel<1.0.0,>=0.0.18",
    "sqladmin<1.0.0,>=0.17.0",
    "celery<6.0.0,>=5.4.0",
    "redis<6.0.0,>=5.2.1",
    "faststream[redis]<1.0.0,>=0.5.37",
]
name = "fastapi-blueprint-api"
description = ""
readme = "../README.md"
version = "0.1.0"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.0",
    "pytest-sugar<1.0.0,>=0.9.7",
    "pytest-cov<5.0.0,>=4.1.0",
    "prospector<2.0.0,>=1.10.2",
    "pre-commit<4.0.0,>=3.3.3",
]
