[tool.poetry]
name = "fastapi-blueprint"
version = "0.1.0"
description = ""
authors = ["Oriol Vall <oriol.vall.hdez@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
redis = "^5.2.1"
taskiq = "^0.11.16"
taskiq-redis = "^1.0.4"
taskiq-faststream = "^0.2.0"
faststream = {extras = ["cli"], version = "^0.5.37"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
prospector = "^1.10.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"