[tool.black]
line_length = 120

[tool.isort]
profile = "black"
[project]
authors = [
    {name = "Oriol Vall", email = "oriol.vall.hdez@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "pydantic<3.0,>=2.0",
    "redis<6.0.0,>=5.2.1",
    "taskiq<1.0.0,>=0.11.16",
    "taskiq-redis<2.0.0,>=1.0.4",
    "taskiq-faststream<1.0.0,>=0.2.0",
    "faststream[cli]<1.0.0,>=0.5.37",
]
name = "fastapi-blueprint-faststream"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.0",
    "pytest-sugar<1.0.0,>=0.9.7",
    "pytest-cov<5.0.0,>=4.1.0",
    "prospector<2.0.0,>=1.10.2",
    "pre-commit<4.0.0,>=3.3.3",
]
